[package]
name = "socketcan-alt"
version = "0.2.2"
authors = ["Toru Ogawa <Hakuyume@users.noreply.github.com>"]
edition = "2018"
description = "Rust binding for SocketCAN"
license = "BSD-3-Clause"
documentation = "https://docs.rs/crate/socketcan-alt/"
repository = "https://github.com/Hakuyume/socketcan-rs"
readme = "README.md"
exclude = [".github"]

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
aio = ["tokio"]

[dependencies]
bitflags = "1.2"
libc = "0.2"
tokio = { git = "https://github.com/tokio-rs/tokio.git", rev = "c30ce1f", features = ["net"], optional = true }

[build-dependencies]
bindgen = { version = "0.55", default-features = false, features = ["runtime"] }

[dev-dependencies]
rand = "0.7"
spin = "0.6"
structopt = "0.3"
tokio = { git = "https://github.com/tokio-rs/tokio.git", rev = "c30ce1f", features = ["macros", "rt", "time"] }
