[package]
name = "socketcan-alt"
version = "0.3.0"
authors = ["Toru Ogawa <Hakuyume@users.noreply.github.com>"]
edition = "2021"
description = "Rust binding for SocketCAN"
license = "BSD-3-Clause"
documentation = "https://docs.rs/crate/socketcan-alt/"
repository = "https://github.com/Hakuyume/socketcan-rs"
readme = "README.md"
exclude = [".github"]

[package.metadata.docs.rs]
features = ["aio", "can-dlc-unaliased"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
aio = ["tokio"]
can-dlc-unaliased = []

[dependencies]
bitflags = "1.3"
libc = "0.2"
tokio = { version = "1", features = ["net"], optional = true }

[build-dependencies]
bindgen = { version = "0.59", default-features = false, features = ["runtime"] }

[dev-dependencies]
rand = "0.8.4"
spin = "0.9.2"
structopt = "0.3.25"
tokio = { version = "1", features = ["macros", "rt", "time"] }
